--- a/ExploreHttp/RequestControl.xaml
+++ b/ExploreHttp/RequestControl.xaml
@@ -140,23 +140,29 @@
                           Grid.Row="1"
                           Margin="0,4"
                           VerticalAlignment="Center"/>
-                <ContentPresenter Content="{Binding RequestBody}"
-                          Style="{StaticResource BodyChoice}"
-                          Grid.Row="2"
-                          Grid.ColumnSpan="3"/>
+                <Border Grid.Row="2"
+                        Grid.ColumnSpan="3"
+                        BorderBrush="{DynamicResource {x:Static SystemColors.ControlDarkDarkBrushKey}}"
+                        BorderThickness="0,0,0,4">
+                    <ContentPresenter Content="{Binding RequestBody}"
+                                      Style="{StaticResource BodyChoice}"/>
+                </Border>
                 <TextBlock Text="Response:"
-                           Grid.Row="3"/>
+                           Grid.Row="3"
+                           VerticalAlignment="Center"/>
                 <TextBlock Text="{Binding ResponseStatus}"
                            d:Text="HTTP 1.1 200 OK"
                            FontWeight="Bold"
-                           FontSize="10"
+                           FontSize="14"
                            VerticalAlignment="Center"
                            Grid.Row="3"
                            Grid.Column="1"
                            Grid.ColumnSpan="2"/>
-                <local:HeaderCollectionControl DataContext="{Binding ResponseHeaders}"
-                                       Grid.Row="4"
-                                       Grid.ColumnSpan="3"/>
+                <GroupBox Grid.Row="4"
+                          Grid.ColumnSpan="3">
+                    <GroupBox.Header>Response Headers</GroupBox.Header>
+                    <local:HeaderCollectionControl DataContext="{Binding ResponseHeaders}"/>
+                </GroupBox>
                 <TextBox IsEnabled="False"
                          MinHeight="60"
                          Text="{Binding ResponseBody.Source}"
