--- a/ExploreHttp/HeaderCollectionControl.xaml
+++ b/ExploreHttp/HeaderCollectionControl.xaml
@@ -19,6 +19,7 @@
                 <ColumnDefinition Width="24"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="32"/>
             </Grid.ColumnDefinitions>
             <TextBox Text="Header Name" Grid.Column="1" IsEnabled="False" FontWeight="Bold"/>
             <TextBox Text="Value" Grid.Column="2" IsEnabled="False" FontWeight="Bold"/>
@@ -32,17 +33,31 @@
                             <ColumnDefinition Width="24"/>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="32"/>
                         </Grid.ColumnDefinitions>
                         <CheckBox IsChecked="{Binding IsEnabled}"
-                                  IsEnabled="{Binding Path=DataContext.IsEditable, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HeaderCollectionControl}}}"/>
+                                  IsEnabled="{Binding Path=DataContext.IsEditable, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HeaderCollectionControl}}}"
+                                  VerticalAlignment="Center"/>
                         <local:TextBoxWithPlaceholder Text="{Binding HeaderName}"
-                                                  Placeholder="Header name"
-                                                  Grid.Column="1"
-                                                  IsEnabled="{Binding Path=DataContext.IsEditable, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HeaderCollectionControl}}}"/>
+                                                      Placeholder="Header name"
+                                                      Grid.Column="1"
+                                                      IsEnabled="{Binding Path=DataContext.IsEditable, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HeaderCollectionControl}}}"
+                                                      VerticalAlignment="Center"/>
                         <local:TextBoxWithPlaceholder Text="{Binding HeaderValue}"
-                                                  Placeholder="Header Value"
-                                                  Grid.Column="2"
-                                                  IsEnabled="{Binding Path=DataContext.IsEditable, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HeaderCollectionControl}}}"/>
+                                                      Placeholder="Header Value"
+                                                      Grid.Column="2"
+                                                      IsEnabled="{Binding Path=DataContext.IsEditable, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HeaderCollectionControl}}}"
+                                                      VerticalAlignment="Center"/>
+                        <Button Grid.Column="3"
+                                Margin="4,2"
+                                Visibility="{Binding DataContext.IsEditable, Converter={StaticResource BoolToVisPositive}, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:HeaderCollectionControl}}}"
+                                Click="RemoveHeader_Click">
+                            <TextBlock Text="{StaticResource TrashIcon}"
+                                       Style="{StaticResource Icons}"
+                                       VerticalAlignment="Center"
+                                       HorizontalAlignment="Center"
+                                       FontSize="10"/>
+                        </Button>
                     </Grid>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
@@ -50,9 +65,9 @@
         <Separator/>
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="24" SharedSizeGroup="hSharedEnable"/>
-                <ColumnDefinition SharedSizeGroup="hSharedName"/>
-                <ColumnDefinition SharedSizeGroup="hSharedVal"/>
+                <ColumnDefinition Width="24"/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <Button Visibility="{Binding IsEditable, Converter={StaticResource BoolToVisPositive}}"
                     Click="OnAddHeader">
