--- a/ExploreHttp/App.xaml
+++ b/ExploreHttp/App.xaml
@@ -43,6 +43,8 @@
             <sys:String x:Key="ImportIcon">&#xE118;</sys:String>
             <sys:String x:Key="DuplicateIcon">&#xE11E;</sys:String>
             <sys:String x:Key="RefreshIcon">&#xE1CA;</sys:String>
+            <sys:String x:Key="PlainIcon">&#xE091;</sys:String>
+            <sys:String x:Key="TreeIcon">&#xE148;</sys:String>
 
             <RoutedCommand x:Key="{x:Static local:CommandNames.NewCollectionCommandName}"/>
             <RoutedCommand x:Key="{x:Static local:CommandNames.OpenCollectionCommandName}"/>
